Alterei o termo machine learning
Alterei o termo machine learning

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <div class="block-title">
                           <h3>Quem <span>Sou?</span></h3>
                         </div>
-                        <p>Olá! Eu sou Denis Lima. Sou um cientista de dados com quase três anos de experiência com projetos de machine learn e deep learn.
+                        <p>Olá! Eu sou Denis Lima. Sou um cientista de dados com quase três anos de experiência com projetos de machine learning e deep learning.
                           Gosto de analisar dados e tenho facilidade em comunicar resultados de forma clara, ajudando na tomada de decisões.  Aqui você irá encontrar algumas outras
                         informações sobre mim.</p>
                       </div>
@@ -206,7 +206,7 @@
                             <h4 class="item-title">Cientista de Dados I</h4>
                             <span class="item-period">Abril 2023 - Agosto 2024</span>
                             <span class="item-small">TOTVS</span>
-                            <p class="item-description">Na TOTVS, eu desenvolvi fortes habilidades de machine learn e deep learn em projetos de larga escala.</p>
+                            <p class="item-description">Na TOTVS, eu desenvolvi fortes habilidades de machine learning e deep learning em projetos de larga escala.</p>
                           </div>
                           <!-- / Experience 1 -->
 
@@ -250,7 +250,7 @@
                             <div class="skill-percentage skill-4"></div>
                           </div>
 
-                          <h4>Machine Learn / Deep Learn</h4>
+                          <h4>Machine Learning / Deep Learning</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-3"></div>
                           </div> 
@@ -536,7 +536,7 @@
                         <a class="filter btn btn-sm btn-link" data-group="illustration">Relatórios</a>
                       </li>
                       <li>
-                        <a class="filter btn btn-sm btn-link" data-group="video">Machine Learn</a>
+                        <a class="filter btn btn-sm btn-link" data-group="video">Machine Learning</a>
                       </li>
                     </ul>
                     <!-- End of Portfolio filter -->
