--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                           <h3>Quem <span>Sou?</span></h3>
                         </div>
                         <p>Olá! Eu sou Denis Lima. Sou um cientista de dados com quase três anos de experiência com projetos de machine learning e deep learning.
-                          Gosto de analisar dados e tenho facilidade em comunicar resultados de forma clara, ajudando na tomada de decisões.  Aqui você irá encontrar algumas outras
+                          Gosto de analisar dados e tenho facilidade em comunicar resultados de forma clara, ajudando na tomada de decisões.  Aqui você encontrará algumas outras
                         informações sobre mim.</p>
                       </div>
                       <div class="download-resume">
@@ -187,7 +187,7 @@
                             <h4 class="item-title">Bacharelado em Ciência e Tecnologia</h4>
                             <span class="item-period">2024</span>
                             <span class="item-small">Universidade Federal do ABC</span>
-                            <p class="item-description">Este curso interdisciplinar me permitiu que eu tivesse uma visão abragente de várias áreas do conhecimento.</p>
+                            <p class="item-description">Este curso interdisciplinar me permitiu que eu tivesse uma visão abrangente de várias áreas do conhecimento.</p>
                           </div>
                           <!-- / Education 3 -->
                         </div>
@@ -215,16 +215,16 @@
                             <h4 class="item-title">Analista de Dados I</h4>
                             <span class="item-period">Favereiro 2022 - Abril 2023</span>
                             <span class="item-small">Hagens</span>
-                            <p class="item-description">Como analista de dados na Hagens, eu desenvolvi habilidades de storytelling e de analise de dados para grandes corporações.</p>
+                            <p class="item-description">Como analista de dados na Hagens, eu desenvolvi habilidades de storytelling e de análise de dados para grandes corporações.</p>
                           </div>
                           <!-- / Experience 2 -->
 
                           <!-- Experience 3 -->
                           <div class="timeline-item">
                             <h4 class="item-title">Estágio em Analista de Dados</h4>
-                            <span class="item-period">Abril 2022 - Abril 2023</span>
+                            <span class="item-period">Janeiro 2021 - Favereiro 2022</span>
                             <span class="item-small">MetLife</span>
-                            <p class="item-description">Estágio em analise de dados, onde desenvolvi minhas habilidades analiticas e técnicas</p>
+                            <p class="item-description">Estágio em análise de dados, onde desenvolvi minhas habilidades analíticas e técnicas</p>
                           </div>
                           <!-- / Experience 3 -->
                         </div>
@@ -327,7 +327,7 @@
                             <img src="images/service/web_design_icon.png" alt="Responsive Design" class="mCS_img_loaded">
                           </div>
                           <h4>Consultas SQL</h4>
-                          <p>Habilidade ténica voltada para a consulta e extração em banco de dados.</p>
+                          <p>Habilidade técnica voltada para a consulta e extração em banco de dados.</p>
                         </div>
                       </div>
                     </div>
@@ -350,8 +350,8 @@
                           <div class="service-image">
                             <img src="images/service/creativity_icon.png" alt="Creativity" class="mCS_img_loaded">
                           </div>
-                          <h4>Relatórios Interativos</h4>
-                          <p>Conhecimento necessario para apresentar resultados ou hipoteses de forma interativa e dinâmica.</p>
+                          <h4>Relatórios interativos</h4>
+                          <p>Conhecimento necessário para apresentar resultados ou hipóteses de forma interativa e dinâmica.</p>
                         </div>
                       </div>
                     </div>
@@ -363,7 +363,7 @@
                             <img src="images/service/advetising_icon.png" alt="Advetising" class="mCS_img_loaded">
                           </div>
                           <h4>IA</h4>
-                          <p>Conhecimento primordial para extrair o máximo que os dados podem oferecer, desde previsão a agrupamentos de dados.</p>
+                          <p>Conhecimento primordial para extrair o máximo que os dados podem oferecer, desde previsão até agrupamentos de dados.</p>
                         </div>
                       </div>
                     </div>
@@ -374,7 +374,7 @@
                   <div class="row">
                     <div class="col-sm-12 col-md-12">
                       <div class="block-title">
-                        <h3>Clientes</h3>
+                        <h3>Empresas nas quais trabalhei</h3>
                       </div>
 
                       <div class="col-sm-4 col-md-2 subpage-block">
@@ -421,7 +421,7 @@
                   <div class="row">
                     <div class="col-sm-12 col-md-12">
                       <div class="block-title">
-                        <h3>Depoimentos de clientes</h3>
+                        <h3>Depoimentos de ex-gestores</h3>
                       </div>
 
 
@@ -445,7 +445,7 @@
                           <!-- Testimonial Content -->
                           <div class="testimonial-content">
                             <div class="testimonial-text">
-                              <p>"Denis é uma pessoa sensasional que tem uma curva de aprendizado muito grande e possui excelentes habilidades de programação"</p>
+                              <p>"Denis é uma pessoa sensacional que tem uma curva de aprendizado muito grande e possui excelentes habilidades de programação."</p>
                             </div>
                           </div>            
                           <!-- /Testimonial Content -->                
@@ -471,7 +471,7 @@
                           <!-- Testimonial Content -->
                           <div class="testimonial-content">
                             <div class="testimonial-text">
-                              <p>"Ele é uma pessoa com fortes habilidades análiticas e com um belo pensamento crítico</p>
+                              <p>"Ele é uma pessoa com fortes habilidades analíticas e com um belo pensamento crítico."</p>
                             </div>
                           </div>            
                           <!-- /Testimonial Content -->                
@@ -497,7 +497,7 @@
                           <!-- Testimonial Content -->
                           <div class="testimonial-content">
                             <div class="testimonial-text">
-                              <p>"Denis foi um dos melhores estágiarios com quem trabalhei, ele sabe estruturar um problema e resolve-lo da melhor forma possível."</p>
+                              <p>"Denis foi um dos melhores estagiários com quem trabalhei, ele sabe estruturar um problema e resolvê-lo da melhor forma possível."</p>
                             </div>
                           </div>            
                           <!-- /Testimonial Content -->                
